added application properties to connect with postgresql db and test example charged OnBoot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#Gives color to the terminal output in the free version, to differentiate between information logs, errors, etc.
+spring.output.ansi.enabled=always
 
+
+#create-drop
+spring.jpa.hibernate.ddl-auto=create
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/backend-shop-cars
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.show-sql=true
+
+
+# Hibernate propeties
+# Makes hibernate generate a better sql for the chosen db
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
+
+
+#To be able to see SQL queries
+logging.level.org.hibernate.SQL=DEBUG
+#To be able to see the parameters of the SQL queries
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
