--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.output.ansi.enabled=always
 
 
 #create-drop
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/backend-shop-cars
