--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dial
 logging.level.org.hibernate.SQL=DEBUG
 #To be able to see the parameters of the SQL queries
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=500KB
+#spring.servlet.multipart.max-request-size=500KB
