--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 #spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.max-file-size=500KB
-#spring.servlet.multipart.max-request-size=500KB
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
